@@ -165,6 +165,11 @@ nav ul{
   }
 }
 
+.article-theme-bodytext ul{
+  list-style: inherit;
+  padding-left: 2em;
+}
+
 .photoAlbumEntry {
   background-image: none;
   background: white;
